resources/css/styles.css
/* Root Varibales  */
:root {
    --col-red: #D95E52;
    --col-organge:#F2884B;
    --col-blue-light: #025373;
    --col-blue-main: #012340;
}

/* Global */
* {
    font-size: 16px;
   
}


body {
    width: 100%;
    background-color: aliceblue;
}

/* Header */
header {
    display: flex;
    justify-content: space-between;
    background-color: white;
    align-items: center
    
    
}
.nav-list {
    list-style: none;
    padding: 1rem 0;
    font-size: 1.8rem;
    font-family: Unica One;
    align-content: center;
    
    
}
    
.nav-item{
    margin-right: 2rem;
    display: inline-block;
}
.logo{
    width: auto;
    height: 170px;
    cursor: pointer;

} 
nav a {
    color: var(--col-blue-main);
    transition: all 0.3s ease 0s;
}
nav a:hover {
    color: var(--col-red);
}

.burger div{
    width: 25px;
    height: 5px;
    background-color: var(--col-blue-light);
    margin: 5px
}
.burger{
    align-content: center;
    padding: 3.5rem 2rem ;
    display: none;
    cursor: pointer;
}

@media screen and (max-width:743px) {
    .resize-animation-stopper * {
        animation: none !important;
        transition: none !important;
      }
    
   body{
    overflow-X: hidden;
   }
    .nav-list{
    position: absolute;
    right: 0px;
    height: 92vh;
    top: 12vh;
    height: 100%;
    background-color: rgb(255, 255, 255);
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-left: 3rem;
    transform: translateX(100%);
    transition: transform 0.5s ease-in-out;
   }
   .nav-item{
    margin-bottom: 2rem;

    
   }
  .burger{
    display: block;
    z-index: 1;
  }
} 

.nav-active{
    transform: translateX(0);  
   
}
@media screen and (min-width:996px){ /*make nav slide out  */
    .nav-item{
        margin-right: 4rem;
        display: inline-block;
        transition: 0.5s ease-in;
    }

}
@media screen and (max-width:995px){ /*make nav slide in  */
    .nav-item{
        margin-right: 2rem;
        display: inline-block;
        transition: 0.5s ease-in;
    }

}
/* Hero Image */
.image-container{
    background-image: url(/resources/img/hero-bannner.jpeg);   
    z-index: -1;
    height: 40rem;
    background-position: center; 
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    margin-top: 4px;  
}

.inner-container{
    text-align: center;
    position: absolute;
    width: 100%;
    color: white;
    height: auto;
    margin-top: 200px;
    font-family: Unica One;
    font-weight: bold;
    
    padding: 3rem 0 3.5rem 0;
}

.inner-container h1{
    font-size: 7em;
    padding-bottom: 1rem;


}

.inner-container h2 {
    margin-top: -17px;
    font-size: 1.7em;
    text-align: center;
    padding-bottom: 1.5rem;
}

.inner-container a{
    margin-top: 20px;
    font-size: 1.3em;
    color: white;
    border: 2px solid white;
    padding: 8px;
}

.inner-container btn{
    display: inline-block;
    width: 200px;
    font-weight: bold;
    color: white;
    text-align: center;
    outline: none;
    text-decoration: none;
    transition: background-color 0.2s ease-out, color 0.2s ease-out;
}
    .btn:hover, .btn:active {
    background-color: #fff;
    color: var(--col-red);
    transition: background-color 0.3s ease-in, color 0.3s ease-in;
}

/* Locations */

